Notes are now placed in the right location and we have space off of the staff as well. Need to fix line overwriting issue (where it covers the staff instead of being overlapped), prevent harmonies being written onto the melody, and configure playback properly.

--- a/Frontend/Demo/App/css/mixTapeApp.css
+++ b/Frontend/Demo/App/css/mixTapeApp.css
@@ -25,16 +25,19 @@ html, body {
  }
 
 .row{
-    border-bottom-width: 5px;
-    border-bottom-style: solid;
+border-color: black;
+border-bottom-width: 5px;
+border:5px;
 }
+
+
+
 
 .cell{
 	height: -webkit-fill-available;
+
     display: inline-block;
     border: 0px;
-    border-style: groove;
-
 }
 
 .staff{
